# as

./: .gitignore  CMakeLists.txt  Doxyfile  FindCimg.cmake  FindConcorde.cmake  FindDiscorde.cmake  FindPmc.cmake  README.md  test.cpp  test_alns.cpp  test_plot.cpp
doc/html/: and__die_8h.html  and__die_8h__incl.map  and__die_8h__incl.md5  and__die_8h_source.html  annotated.html  as__version_8h.html  as__version_8h_source.html  can__apply_8h.html  can__apply_8h__dep__incl.map  can__apply_8h__dep__incl.md5  can__apply_8h__incl.map  can__apply_8h__incl.md5  can__apply_8h_source.html  classas_1_1iterator__pair-members.html  classas_1_1iterator__pair.html  classas_1_1oplib_1_1OPInstance-members.html  classas_1_1oplib_1_1OPInstance.html  classas_1_1oplib_1_1OPInstance__coll__graph.map  classas_1_1oplib_1_1OPInstance__coll__graph.md5  classas_1_1oplib_1_1OPInstance__inherit__graph.map  classas_1_1oplib_1_1OPInstance__inherit__graph.md5  classas_1_1tsplib_1_1TSPInstance-members.html  classas_1_1tsplib_1_1TSPInstance.html  classas_1_1tsplib_1_1TSPInstance__coll__graph.map  classas_1_1tsplib_1_1TSPInstance__coll__graph.md5  classas_1_1tsplib_1_1TSPInstance__inherit__graph.map  classas_1_1tsplib_1_1TSPInstance__inherit__graph.md5  classes.html  (+132 more)
src/: alns.h  alns_acceptance.h  and_die.h  as_version.h  can_apply.h  combinatorial.h  console.h  containers.h  discorde.h  file_stream.h  geometry.h  graph.h  graph_plot.h  is_associative.h  iterator_pair.h  max_clique.h  mtz.h  mwis.h  numeric.h  numeric_conversions.h  oplib.h  point.h  random.h  repeat.h  string.h  tmp.h  tsp.h  tsplib.h
(+191 files in other folders)
